--- a/BFS/[백준]적록색약/적록색맹.md
+++ b/BFS/[백준]적록색약/적록색맹.md
@@ -1,7 +1,8 @@
-R-G-B 각 그룹의 개수를 찾아라!
-그런데, 적록색맹은 R과 G를 구분할 수 없는
-그래서 하나로 봐야하는
+# 1. 이해
+- R-G-B 각 그룹의 개수를 찾아라!
+- 그런데, 적록색맹은 R과 G를 구분할 수 없는
+- 그래서 하나로 봐야하는
 --------------------------------------
-[보자마자 생각난 구현]
-	- bfs로 같은 그룹을 묶고, bfs가 끝날 때마다 카운트를 하면 그룹 개수를 구할 수 있겠다
-	- 적록색맹의 경우, 조건문을 달아서 하나의 그룹으로 처리하면 되겠다!
+# 2. 구현
+- bfs로 같은 그룹을 묶고, bfs가 끝날 때마다 카운트를 하면 그룹 개수를 구할 수 있겠다
+- 적록색맹의 경우, 조건문을 달아서 하나의 그룹으로 처리하면 되겠다!
