--- a/BFS/[백준]트리/트리.md
+++ b/BFS/[백준]트리/트리.md
@@ -1,16 +1,16 @@
-[이해]
+# 1. 이해
 - 이해할 내용이 없음. 그냥 주어진대로 구현하면 됨
 
-[구현]
-1. 트리를 만들어야 한다!
-- 벡터로 만들어야함. 왜? 부모마다 자식이 몇 개일지 모른다. 개수 파악하는데 벡터가 편하다.
-- 부모에 자식을 push_back한다
+# 2. 구현
+## 1. 트리를 만들어야 한다!
+  - 벡터로 만들어야함. 왜? 부모마다 자식이 몇 개일지 모른다. 개수 파악하는데 벡터가 편하다.
+  - 부모에 자식을 push_back한다
 
-2. 삭제를 어떻게 처리하면 좋을까?
-- 연결된 모든 노드를 방문처리하고, 방문된 노드는 리프노드로 카운트하지 않는 방식을 사용하면 되겠다
-- bfs로 연결된 모든 노드를 방문하면 된다!
+## 2. 삭제를 어떻게 처리하면 좋을까?
+  - 연결된 모든 노드를 방문처리하고, 방문된 노드는 리프노드로 카운트하지 않는 방식을 사용하면 되겠다
+  - bfs로 연결된 모든 노드를 방문하면 된다!
 
-3. 리프 노드를 어떻게 알지? (주의)
-- 애초에 자식이 없으면 리프 노드이다.
-- 자식이 있긴 한데, 해당 자식이 삭제되었으면 리프노드로 판단해야함 
--> 벡터 사이즈가 0이 아니긴 하지만, 해당 자식이 방문처리 되었으면 그 부모는 리프노드임
+## 3. 리프 노드를 어떻게 알지? (주의)
+  - 애초에 자식이 없으면 리프 노드이다.
+  - 자식이 있긴 한데, 해당 자식이 삭제되었으면 리프노드로 판단해야함 
+  -> 벡터 사이즈가 0이 아니긴 하지만, 해당 자식이 방문처리 되었으면 그 부모는 리프노드임
