--- a/구현/[백준]거울/거울.md
+++ b/구현/[백준]거울/거울.md
@@ -1,46 +1,40 @@
 # 1. 이해
-
-```
-[맵]
+##  [맵]
 - N x M
 - 0 : 빈공간
 - 1 : 거울
 
-[출력]
+### [출력]
 - 1번부터 2N+2M구멍에서 쏜 빛이 나가는 구멍 출력
-```
 
 # 2. 설명
+##  [구현]
+### 1. 넘버링(init)
+- MAP 배열에 넘버링
+- 넘버링 규칙  
+	- 왼쪽 : (1, 0) ~ (N, 0)  
+	- 아래쪽 : (N+1, 1) ~ (N+1, M)  
+	- 오른쪽 : (N, M+1) ~ (1, M+1)  
+	- 위쪽 ; (0, M) ~ (0, 1)  
 
-```
-[구현]
-1. 넘버링(init)
-	- MAP 배열에 넘버링
-	- 넘버링 규칙
-		a. 왼쪽 : (1, 0) ~ (N, 0)
-		b. 아래쪽 : (N+1, 1) ~ (N+1, M)
-		c. 오른쪽 : (N, M+1) ~ (1, M+1)
-		d. 위쪽 ; (0, M) ~ (0, 1)
+### 2. 방향전환 함수(get_direction)
+- 현재방향 -> 다음방향
+- 우 -> 상
+- 상 -> 우
+- 좌 -> 하
+- 하 -> 좌
 
-2. 방향전환 함수(get_direction)
-	- 현재방향 -> 다음방향
-	- 우 -> 상
-	- 상 -> 우
-	- 좌 -> 하
-	- 하 -> 좌
-
-3. 이동함수(process)
-	- 출발점과 출발 방향
-		a. 왼쪽
-			범위 : (1, 1) ~ (N, 1)
-			방향 : 우(0)
-		b. 아래쪽
-			범위 : (N, 1) ~ (N, M)
-			방향 : 상(1)
-		c. 오른쪽
-			범위 : (N, M) ~ (1, M)
-			방향 : 좌(2)
-		d. 위쪽
-			범위 : (1, M) ~ (1, 1)
-			방향 : 하(3)
-```
+### 3. 이동함수(process)
+- 출발점과 출발 방향  
+	- 왼쪽
+		- 범위 : (1, 1) ~ (N, 1)
+		- 방향 : 우(0)  
+	- 아래쪽  
+		- 범위 : (N, 1) ~ (N, M)  
+		- 방향 : 상(1)  
+	- 오른쪽  
+		- 범위 : (N, M) ~ (1, M)  
+		- 방향 : 좌(2)  
+	- 위쪽  
+		- 범위 : (1, M) ~ (1, 1)  
+		- 방향 : 하(3)  
