Update 알고리즘 수업 - 깊이 우선 탐색1.md

--- a/DFS/백준_24479_알고리즘 수업 - 깊이 우선 탐색1/알고리즘 수업 - 깊이 우선 탐색1.md
+++ b/DFS/백준_24479_알고리즘 수업 - 깊이 우선 탐색1/알고리즘 수업 - 깊이 우선 탐색1.md
@@ -20,4 +20,4 @@
 2. dfs 작성
 ```
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/f0d09fab-f760-445a-969a-74459f3b88cd/71188d19-bc92-43a1-bc4f-8e5fa717e6c4/image.png)
+![image](https://github.com/user-attachments/assets/c70f3628-ac6d-4ae1-9541-5cc4f57c520d)
