--- a/브루트포스/백준_2003_수들의 합2/수들의 합2.md
+++ b/브루트포스/백준_2003_수들의 합2/수들의 합2.md
@@ -14,8 +14,9 @@
 - 여기서 더하기를 다 할게 아니라 숫자 하나 빼고 하나 더하는식으로 하면 
 복잡도를 줄일 수 있음 -> 왜냐? 연속이니까
 ```
+<img width="1108" alt="스크린샷 2024-10-03 오후 3 20 02" src="https://github.com/user-attachments/assets/250eda63-6acc-43a3-b7ae-66a431f684bf">
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/f0d09fab-f760-445a-969a-74459f3b88cd/755899eb-d5c7-4189-88ab-98620f26d7d4/image.png)
+
 
 # 2. 설계
 
