--- a/그리디/백준_13305_주유소/주유소.md
+++ b/그리디/백준_13305_주유소/주유소.md
@@ -32,4 +32,4 @@
 그니까 이런 느낌이쥬
 ```
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/f0d09fab-f760-445a-969a-74459f3b88cd/fe39e5b6-2b31-45a4-9107-80b48e7ffad8/image.png)
+![image](https://github.com/user-attachments/assets/2ea43cf6-f20e-4cb9-a211-d84827331c89)
