--- a/DP/백준_2579_계단 오르기/계단 오르기.md
+++ b/DP/백준_2579_계단 오르기/계단 오르기.md
@@ -31,14 +31,14 @@
 	-> 이제 첫 번째 인덱스에 기록된 점수가 있음
 	-> 이 문제에서는 경로는 필요없을듯
 ```
+<img width="1037" alt="image" src="https://github.com/user-attachments/assets/e035711f-8676-498b-a527-d60b432409e6">
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/f0d09fab-f760-445a-969a-74459f3b88cd/bc901cc3-0a54-4678-8818-4f633d619e70/image.png)
 
 # 3. 설계 오류
 
 ### 반례
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/f0d09fab-f760-445a-969a-74459f3b88cd/765b3d53-7b58-4c4c-8dc4-0f7b4db88903/image.png)
+<img width="1003" alt="image" src="https://github.com/user-attachments/assets/b8256bbd-74ef-4712-bea8-21ed3e0d277d">
 
 ### 어떻게 풀어야 할까?
 
