--- a/DP/백준_11660_구간합 구하기5/구간합 구하기5.md
+++ b/DP/백준_11660_구간합 구하기5/구간합 구하기5.md
@@ -119,5 +119,5 @@ void output(){
 
 - 왜 시간초과가 발생할까?
 - 왜냐하면, table을 구성할 때도 많은 시간이 소요됨
-
-#4. 해결
+# 4. 해결
+<img width="1551" alt="스크린샷 2024-10-05 오후 3 33 56" src="https://github.com/user-attachments/assets/38b813c4-09a0-4ebc-96ee-e08ea284c0fa">
