--- a/DP/백준_1309_동물원/동물원.md
+++ b/DP/백준_1309_동물원/동물원.md
@@ -19,10 +19,10 @@
 타일링 문제임
 ```
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/f0d09fab-f760-445a-969a-74459f3b88cd/dc87e203-7d2e-4086-a23e-ab25c236ae0a/image.png)
+<img width="1181" alt="스크린샷 2024-10-05 오후 8 03 09" src="https://github.com/user-attachments/assets/1c79ffbd-dda4-410f-aecb-b60a65738697">
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/f0d09fab-f760-445a-969a-74459f3b88cd/bffd93c6-083d-4f3d-b062-c9570bfeb80d/image.png)
+<img width="1226" alt="스크린샷 2024-10-05 오후 8 03 46" src="https://github.com/user-attachments/assets/a45e1b27-0981-41f0-9406-e07ef051a456">
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/f0d09fab-f760-445a-969a-74459f3b88cd/9b89dde6-b41d-4a33-a901-bc2361f73823/image.png)
+<img width="1038" alt="스크린샷 2024-10-05 오후 8 03 56" src="https://github.com/user-attachments/assets/430382d4-947e-44ae-8392-257d904cc71a">
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/f0d09fab-f760-445a-969a-74459f3b88cd/a36bdf3d-c454-4a16-9b3a-c53b7df60c30/image.png)
+<img width="1137" alt="스크린샷 2024-10-05 오후 8 07 51" src="https://github.com/user-attachments/assets/b69d627b-ba31-41c9-8ba6-d06897322f3b">
