--- a/브루트포스/백준_17135_캐슬 디펜스/캐슬 디펜스.md
+++ b/브루트포스/백준_17135_캐슬 디펜스/캐슬 디펜스.md
@@ -47,4 +47,4 @@
 	- 그래서 배열을 하나 만들어 놓고 업데이트 시키는 방식을 활용
 ```
 
-![Uploading image.png…]()
+![image](https://github.com/user-attachments/assets/8e646edb-bcbf-4ead-ab69-5106b3a9070a)
