--- a/DP/BOJ_1309_동물원/동물원.md
+++ b/DP/BOJ_1309_동물원/동물원.md
@@ -1,6 +1,12 @@
-# 1. 이해
+### 💡 BOJ 1309 - 동물원 [[문제 링크](https://www.acmicpc.net/problem/1309)]
 
-```
+| 항목 | 내용 |
+|------|------|
+| 문제 유형 | 타일링 문제 + Bottom-up |
+| 사용 알고리즘 | DP | 
+| 난이도 | 실버1 |
+
+#### ✅ 문제 설명
 [우리]
 - 가로 두 칸, 세로 N칸
 - 사자를 배치할건데, 가로랑 세로로 붙어서 배치 안됨
@@ -11,13 +17,10 @@
 
 [입력]
 - 우리의 크기 N (1 ≤ N ≤ 100,000)
-```
 
-# 2. 설계
-
-```
-타일링 문제임
-```
+#### 🔍 풀이 접근
+- N이 1일때부터 하나씩 해본다
+- N이 커질 때 어떤 규칙이 있는지 파악한다
 
 <img width="1181" alt="스크린샷 2024-10-05 오후 8 03 09" src="https://github.com/user-attachments/assets/1c79ffbd-dda4-410f-aecb-b60a65738697">
 
@@ -25,4 +28,29 @@
 
 <img width="1038" alt="스크린샷 2024-10-05 오후 8 03 56" src="https://github.com/user-attachments/assets/430382d4-947e-44ae-8392-257d904cc71a">
 
-<img width="1137" alt="스크린샷 2024-10-05 오후 8 07 51" src="https://github.com/user-attachments/assets/b69d627b-ba31-41c9-8ba6-d06897322f3b">
+#### 💡 핵심 로직
+```
+D[i]는 뭐냐?
+> N = i일 때 경우의 수
+
+D[i] = 현재 행 비우기
++ i-1행에 값이 있는 애들은 사자 1마리씩
++ i-1행에 값이 없는 애들은 사자 2마리씩
+
+D를 두 개의 열로 나누어 "빈 행의 개수"를 담는 칸과 "사자가 존재하는 개수"를 담는 칸으로 나눈다.
+
+D[1][0] = 1
+D[1][1] = 2
+
+D[2][0] = D[1][0] + D[1][1]
+D[2][1] = D[1][0] * 2 + D[1][1]
+
+> 점화식
+D[i][0] = D[i-1][0] + D[i-1][1]
+D[i][1] = D[i-1][0] * 2 + D[i-1][1]
+
+이렇게 i를 N까지 bottom-up하면, 모든 경우의 수를 구할 수 있음
+```
+
+#### 📌 배운 점
+- `이전 상태`에 따라 현재 상태를 결정하는 Bottom-up DP에 대해 이해했습니다.
