modify: md 파일 형식 수정

--- a/DP/BOJ_1309_동물원/동물원.md
+++ b/DP/BOJ_1309_동물원/동물원.md
@@ -1,4 +1,4 @@
-### 💡 BOJ 1309 - 동물원 [[문제 링크](https://www.acmicpc.net/problem/1309)]
+## 💡 BOJ 1309 - 동물원 [[문제 링크](https://www.acmicpc.net/problem/1309)]
 
 | 항목 | 내용 |
 |------|------|
@@ -6,7 +6,7 @@
 | 사용 알고리즘 | DP | 
 | 난이도 | 실버1 |
 
-#### ✅ 문제 설명
+### ✅ 문제 설명
 [우리]
 - 가로 두 칸, 세로 N칸
 - 사자를 배치할건데, 가로랑 세로로 붙어서 배치 안됨
@@ -18,7 +18,7 @@
 [입력]
 - 우리의 크기 N (1 ≤ N ≤ 100,000)
 
-#### 🔍 풀이 접근
+### 🔍 풀이 접근
 - N이 1일때부터 하나씩 해본다
 - N이 커질 때 어떤 규칙이 있는지 파악한다
 
@@ -28,7 +28,7 @@
 
 <img width="1038" alt="스크린샷 2024-10-05 오후 8 03 56" src="https://github.com/user-attachments/assets/430382d4-947e-44ae-8392-257d904cc71a">
 
-#### 💡 핵심 로직
+### 💡 핵심 로직
 ```
 D[i]는 뭐냐?
 > N = i일 때 경우의 수
@@ -52,5 +52,5 @@ D[i][1] = D[i-1][0] * 2 + D[i-1][1]
 이렇게 i를 N까지 bottom-up하면, 모든 경우의 수를 구할 수 있음
 ```
 
-#### 📌 배운 점
+### 📌 배운 점
 - `이전 상태`에 따라 현재 상태를 결정하는 Bottom-up DP에 대해 이해했습니다.
