--- a/DP/BOJ_2156_포도주 시식/포도주 시식.md
+++ b/DP/BOJ_2156_포도주 시식/포도주 시식.md
@@ -1,30 +1,36 @@
-# 1. 이해
+## 💡 BOJ 1149 - RGB거리 [[문제 링크](https://www.acmicpc.net/problem/1149)]
 
+| 항목 | 내용 |
+|------|------|
+| 문제 유형 | Bottom-up 방식의 다중 상태 DP |
+| 사용 알고리즘 | DP |
+| 난이도 | 실버1 |
+
+### ✅ 문제 설명
+- 포도잔 `N`개가 일렬로 존재한다.
+
+- 포도잔에는 포도주의 양이 다를 수 있다.
+
+- **연속으로 놓여 있는 3잔을 모두 마실 수는 없다.**
+
+- 규칙에 따라 포도주를 마실 때, 최대한 많은 양의 포도주를 마셔야 한다.
+
+### 🔍 풀이 접근
+- dp에 최적해가 들어있다고 가정한다.
+
+- 3잔 연속으로 포도주를 마실 수 없으므로, 선택지는 다음과 같다.
+    1. 이번 잔을 마시지 않는다.
+    2. 이번 잔을 마시고 전 잔은 마시지 않았다.
+    3. 이번 잔을 마시고 전 잔도 마셨다. -> 전전 잔은 마시면 안 됨.
+
+### 💡 핵심 로직
 ```
-[규칙]
-1. 포도주 잔을 선택하면 다 마시고 다시 나둬야 함
-2. 연속으로 놓여 있는 3잔은 모두 마실 수 없음
-
-[출력]
-- 가능한 많은 포도잔을 마셔라
-
-[입력]
-- 잔의 개수 n (1≤n≤10000)
-- 포도잔에 들어있는 양...
+dp[i] = max(
+    dp[i-1],
+    dp[i-2] + wine[i],
+    dp[i-3] + wine[i-1] + wine[i]
+)
 ```
 
-# 2. 설계
-
-```
-- 이 문제... 계단 오르기보다 쉬운 버전 아님?
-- dp[i]에는 최적해가 있다고 가정
-- max(dp[i-1] + arr[i], dp[i-3] + arr[i] + arr[i-1]) 이거 아니노?
-```
-
-# 3. 놓친 부분
-
-```
-- 이 문제는, 아예 안마셔도 됨
-- 계단 오르기는 일단 무조건 앞으로 가야함
-- 근데 얘는 stay가 가능
-```
+### 📌 배운 점
+- 제약사항이 있는 Bottom-up DP에 대해 이해했습니다.
