modify: 계단오르기&LCS 설명 수정

--- a/DP/BOJ_2579_계단 오르기/계단 오르기.md
+++ b/DP/BOJ_2579_계단 오르기/계단 오르기.md
@@ -1,50 +1,36 @@
-# 1. 이해
+## 💡 BOJ 1149 - RGB거리 [[문제 링크](https://www.acmicpc.net/problem/2579)]
 
-```
-[상황]
-- 계단이 있음
-- 각 계단에는 점수가 있음
-- 밟으면 점수 획득
+| 항목 | 내용 |
+|------|------|
+| 문제 유형 | 계단 오르기 문제(제약사항이 있는 bottom-up DP) |
+| 사용 알고리즘 | DP |
+| 난이도 | 실버3 |
 
-[계단 오르기 규칙]
-1. 한 번에 한 개 혹은 두 개씩 오를 수 있음
-2. 연속된 세 개 밟으면 안됨(단, 시작점은 개수 안침)
-3. 마지막 도착 계단은 반드시 밟아야 함
+### ✅ 문제 설명
+- 계단이 있는데, 각 계단에는 점수가 있고 밟으면 점수를 획득함
 
-[출력]
+- 계단 오르기 규칙
+	1. 한 번에 한 개 혹은 두 개씩 오를 수 있음
+	2. 연속된 세 개 밟으면 안됨(단, 시작점은 개수 안침)
+	3. 마지막 도착 계단은 반드시 밟아야 함
+
 - 주어진 규칙에 따라 획득할 수 있는 점수의 최댓값을 출력하라
 
-[입력]
-- 계단의 개수 N (1≤N≤300)
-- 점수... (1만 이하 자연수)
+### 🔍 풀이 접근
+- dp에 최적해가 들어있다고 가정한다.
+
+- 3개 연속으로 계단을 밟을 수 없으므로, 선택지는 다음과 같다.
+    1. 이번 계단을 밟고 전 계단은 밟지 않았다.
+    2. 이번 계단을 밟고 전 계단도 밟았다. -> 전전 계단을 밟으면 안됨.
+
+### 💡 핵심 로직
+```
+dp[i] = max(
+    dp[i-2] + wine[i],
+    dp[i-3] + wine[i-1] + wine[i]
+)
 ```
 
-# 2. 설계
-
-```
-1. OOXOOXOOXOO...로 하면 안되냐?
-	-> 1 1 10000 1 1 10000 1 1 20000 1 1... 이런 케이스는 못하잖아
-2. 모든 경우의 수를 따져보면 안되나?
-	-> N은 최대 300이잖아 -> 2^300 -> 말도 안돼
-3. 흠... 마지막 계단은 무조건 밟아야 하니까, 뒤에서부터 한 번 생각해보는게 어때
-	-> 한 칸 앞 vs 두 칸 앞
-	-> 이제 첫 번째 인덱스에 기록된 점수가 있음
-	-> 이 문제에서는 경로는 필요없을듯
-```
-<img width="1037" alt="image" src="https://github.com/user-attachments/assets/e035711f-8676-498b-a527-d60b432409e6">
-
-
-# 3. 설계 오류
-
-### 반례
-
-<img width="1003" alt="image" src="https://github.com/user-attachments/assets/b8256bbd-74ef-4712-bea8-21ed3e0d277d">
-
-### 어떻게 풀어야 할까?
-
-```
-1. dp[i]에는 i까지의 최적해가 구해져 있다
-2. 여기에 값을 더하기만 하면 된다
-3. 그럼 어떻게 더하냐? -> max(한 칸 띄우고 계산, 두 칸 띄우고 계산)
-이게 다임
-```
+### 📌 배운 점
+- `BruteForce`를 하지 않고 문제를 여러 개의 작은 부분 문제로 나누고, 이 부분 문제의 해를 한 번만 계산해 저장함으로써 전체 문제의 최적해를 구하는 `DP`에 대해 이해했습니다.
+- 제약사항이 있는 bottom-up DP에 대해 공부했습니다.
