--- a/DP/BOJ_2156_포도주 시식/포도주 시식.md
+++ b/DP/BOJ_2156_포도주 시식/포도주 시식.md
@@ -21,7 +21,7 @@
 - 3잔 연속으로 포도주를 마실 수 없으므로, 선택지는 다음과 같다.
     1. 이번 잔을 마시지 않는다.
     2. 이번 잔을 마시고 전 잔은 마시지 않았다.
-    3. 이번 잔을 마시고 전 잔도 마셨다. -> 전전 잔은 마시면 안 됨.
+    3. 이번 잔을 마시고 전 잔도 마셨다. -> 전전 잔은 마시면 안됨.
 
 ### 💡 핵심 로직
 ```
@@ -33,4 +33,4 @@ dp[i] = max(
 ```
 
 ### 📌 배운 점
-- 제약사항이 있는 Bottom-up DP에 대해 이해했습니다.
+- 제약사항이 있는 Bottom-up DP에 대해 공부했습니다.
