modify: BOJ_11057_오르막수 README 수정

--- a/DP/BOJ_11057_오르막수/오르막수.md
+++ b/DP/BOJ_11057_오르막수/오르막수.md
@@ -1,21 +1,26 @@
-# 1. 이해
+## 💡 BOJ 11057 - 오르막수 [[문제 링크](https://www.acmicpc.net/problem/11057)]
 
-```
-[오르막 수]
+| 항목 | 내용 |
+|------|------|
+| 문제 유형 | Bottom-up DP, 누적합 |
+| 사용 알고리즘 | DP |
+| 난이도 | 실버1 |
+
+### ✅ 문제 설명
+
 - 오르막 수는 수의 자리가 오름차순을 이루는 수
+
 - 2234, 3678, 11119는 오르막 수
+
 - 2232, 3676, 91111은 오르막 수가 아님
+
 - 0으로 시작 가능
 
-[출력]
-- 수의 길이 N이 주어질 때, 오르막 수의 개수를 구하라
+- 수의 길이 `N`이 주어질 때, 오르막 수의 개수를 구하라
 
-[입력]
-- N, 1 ≤ N ≤ 1000
-```
+### 🔍 풀이 접근
 
-# 2. 설계
-
+#### 일단 적어보자
 ```
 (1자리)
 0
@@ -70,3 +75,25 @@ S10 = 1+2+3+...+10 = 55
 3자리
 S10 + S9 + S8 + ... S1 = 220
 ```
+
+#### 누적합
+- N자리 오르막수의 개수를 구하기 위해, 1자리 오르막수부터 누적함을 쌓아가면 구할 수 있겠다.
+
+- 세 자리 오르막수를 구할 때 S10 + S9 + S8 +...+ S1이다.
+
+- 누적합 배열 S를 선언하고 S[10]에 N자리 오르막수가 저장된다.
+
+### 💡 핵심 로직
+```cpp
+void sum(){
+    int rst = 0;
+    
+    for(int i=1; i<=10; i++){
+        rst += S[i];
+        S[i] = rst % 10007;
+    }
+}
+```
+
+### 📌 배운 점
+- DP의 한 축인 누적합으로 최적해를 구할 수 있음을 이해했습니다.
