--- a/DP/BOJ_11660_구간합 구하기5/구간합 구하기5.md
+++ b/DP/BOJ_11660_구간합 구하기5/구간합 구하기5.md
@@ -1,32 +1,38 @@
-# 1. 이해
+## 💡 BOJ 11660 - 구간합 구하기5 [[문제 링크](https://www.acmicpc.net/problem/11660)]
 
-```
-[상황]
+| 항목 | 내용 |
+|------|------|
+| 문제 유형 | 누적합 |
+| 사용 알고리즘 | DP |
+| 난이도 | 실버1 |
+
+### ✅ 문제 설명
+**[상황]**
 - N x N개의 수가 N x N의 표에 존재
 
-[출력]
+**[출력]**
 - (x1, y1)부터 (x2, y2)까지의 합을 구하라
 
-[입력]
+**[입력]**
 - 표의 크기 N, 합을 구하는 횟수 M (1 ≤ N ≤ 1024, 1 ≤ M ≤ 100000)
 - 맵 정보
 - 좌표들 (x1 ≤ x2, y1 ≤ y2)
-```
 
-# 2. 설계
+### 🔍 풀이 접근
 
-```
-[생각]
+#### 일단 적어보자
+**[생각]**
 - 합을 구하는 횟수가 최대 10만, 합의 개수 최대 1024 x 1024 = 1백만
 - 무조건 시간초과
 
-[시간을 줄이는 방법]
+**[시간을 줄이는 방법]**
 - 합이 구해져 있는 테이블을 만들 것
 - 여기서 O(1)만에 접근해서 계산 가능하도록 할 것
 
-[테이블]
+**[테이블]**
 - (1, 1) -> (x2, y2) 합을 미리 구해놓자
 - 예시
+```
 	1 2 3 4
 	2 3 4 5
 	3 4 5 6
@@ -46,78 +52,23 @@
 	규칙이 보이쥬?
 	value = table[x2][y2] - table[x1-1][y2] - table[x2][y1-1]
 ```
-# 3. 시간초과 코드
 
+#### 누적합
+- 누적합을 미리 구해놓고, O(1)으로 접근해 단순 사칙연산으로 최적해를 구하자.
+
+- 누적합을 build할 때에도 시간초과 방지를 수행하자.
+
+### 💡 핵심 로직
 ```cpp
-#include <iostream>
-using namespace std;
-
-int N, M;
-int MAP[1025][1025];
-int table[1025][1025];
-
-void input();
-void solve();
-void output();
-
-int main(){
-    ios::sync_with_stdio(false);
-    cin.tie(0); cout.tie(0);
-    
-    input();
-    //output();
-    solve();
-}
-
-void input(){
-    cin >> N >> M;
-    for(int i=1; i<=N; i++){
+for(int i=1; i<=N; i++){
         for(int j=1; j<=N; j++){
-            cin >> MAP[i][j];
+            table[i][j] = table[i-1][j] + table[i][j-1] + MAP[i][j] - table[i-1][j-1];
         }
     }
-    
-    int sum = 0;
-    
-    for(int i=1; i<=N; i++){
-        for(int j=1; j<=N; j++){
-            sum = 0;
-            
-            for(int a=1; a<=i; a++){
-                for(int b=1; b<=j; b++){
-                    sum += MAP[a][b];
-                }
-            }
-            table[i][j] = sum;
-        }
-    }
-}
-
-void solve(){
-    int x1, y1, x2, y2;
-    
-    for(int i=0; i<M; i++){
-        cin >> x1 >> y1 >> x2 >> y2;
-        
-        if(x1 == 1 && y1 == 1) cout << table[x2][y2] << '\n';
-        else if(x1 == x2 && y1 == y2) cout << MAP[x1][y1] << '\n';
-        else cout << table[x2][y2] - table[x1-1][y2] - table[x2][y1-1]  + 1 << '\n';
-    }
-}
-
-void output(){
-    for(int i=1; i<=N; i++){
-        for(int j=1; j<=N; j++){
-            cout << table[i][j] << ' ';
-        }
-        cout << '\n';
-    }
-    cout << '\n';
-}
-
 ```
+- 누적합을 build할 때에도 로직 적용.
 
-- 왜 시간초과가 발생할까?
-- 왜냐하면, table을 구성할 때도 많은 시간이 소요됨
-# 4. 해결
-<img width="1551" alt="스크린샷 2024-10-05 오후 3 33 56" src="https://github.com/user-attachments/assets/38b813c4-09a0-4ebc-96ee-e08ea284c0fa">
+### 📌 배운 점
+- 누적합을 이용해 O(1)으로 최적해를 구하는 최적화 기법을 이해했습니다.
+
+- 누적합을 build할 때에도 최적화 기법을 적용해야 함을 인식했습니다.
