modify: BOJ_19238_스타트 택시 README 수정

--- a/Graph/백준_19238_스타트 택시/스타트택시.md
+++ b/Graph/백준_19238_스타트 택시/스타트택시.md
@@ -1,222 +1,34 @@
-# 1. 이해
+## 💡 BOJ 19238 - 스타트 택시 [[문제 링크](https://www.acmicpc.net/problem/19238)]
 
-```
-[스타트 택시]
-- 손님을 도착지로 데려다줄 때마다 연료가 증가
-- M 명의 손님을 태워야 함
-- 영역 N x N
-	- 빈칸 : 0
-	- 벽 : 1
-- 항상 최단경로로만 이동
-- 승객은 빈칸 -> 다른 빈 칸으로 이동하고싶음
-- 승객을 태울 때, 최단거리가 가장 짧은 승객을 고름
-	- 여러 명이면, 행 번호가 작은 손님
-	- 여러 명이면, 열 번호가 작은 손님
-- 택시와 승객이 같은 칸 == 최단거리 0
-- 한 칸 이동할 때마다 연료 1 소모
-- 손님을 목적지로 데려다주면 지나온 경로의 2배만큼 연료 충전됨
-- 가다가 연료 부족하면 그날 샤따 내려
-- 도착과 동시에 연료 바닥나는 것은 성공임
+| 항목 | 내용 |
+|------|------|
+| 문제 유형 | `그래프 탐색` |
+| 사용 알고리즘 | `BFS` |
+| 난이도 | 골드2 |
 
-[출력]
-- 모든 손님을 이동시키고 연료를 충전했을 때 남은 연료의 양을 출력
-- 도중에 연료가 없으면 -1 출력
-- 연료가 없어서 모든 손님을 목적지로 이동시킬 수 없으면 -1 출력
+### ✅ 문제 설명
+- N x N 크기의 맵에 M명의 승객이 있다
 
-[입력]
-- N, M, 초기 연료 양
-- 맵
-- 택시 위치
-- 승객의 출발지와 목적지
-```
+- M명의 승객 각각에 대한 M개의 목적지가 있고, 택시는 이들 승객을 태워서 이동할거임
 
-# 2. 설계
+- 택시는 항상 최단경로로 이동하는데, 도중에 연료가 바닥나면 실패함
 
-```
-BFS 함수를 잘 구현하면 된다
-벽이 있는 맵에서 최단거리로 움직이기 위해 BFS 탐색을 수행해준다
+- **택시가 모든 승객을 이동시키고 남은 연료의 양을 출력하는 문제**
 
-한 번의 BFS 탐색에 필요한 시간복잡도는 O(NM) N : 노드 개수, M : 간선 개수
-최악의 경우로 계산해보면 20*20*4 = 16,000
-승객이 총 400명 있다고 해도 400*16000 = 6,400,000
+### 🔍 풀이 접근
+- 시뮬레이션 + BFS 문제로 접근한다
 
-시간 복잡도는 충분
+- 단, 예외 처리를 잘 수행해준다
 
-최단거리 이동함수만 있으면 된다
-```
+### 💡 핵심 로직
+- 승객을 찾을 때는 BFS 탐색 후 가장 우선순위가 높은 승객을 선택한다
 
-# 3. 코드
+- 목적지로 이동할 때는 BFS 탐색 시 목적지를 만나자마자 리턴한다
 
-```cpp
-#include <iostream>
-#include <queue>
-#include <cstring>
+- 도착지가 벽으로 막혀 있을 수 있다
 
-using namespace std;
+- A 승객의 도착지와 B 승객의 위치는 동일할 수 있다
 
-struct Point {
-	int y;
-	int x;
-};
-
-struct Customer {
-	Point from;
-	Point to;
-};
-
-int dy[4] = { -1,1,0,0 };
-int dx[4] = { 0,0,-1,1 };
-int board[21][21];
-int visited[21][21];
-Customer customers[403];
-
-int N, M, F;
-Point taxi;
-int ans;
-
-void Input();
-void Solve();
-bool Bfs();
-
-int main() 
-{
-	ios::sync_with_stdio(false);
-	cin.tie(0); cout.tie(0);
-
-	Input();
-	Solve();
-
-	cout << ans << '\n';
-	return 0;
-}
-
-void Input() {
-	cin >> N >> M >> F;
-	for (int i = 1; i <= N; i++)
-	{
-		for (int j = 1; j <= N; j++)
-		{
-			cin >> board[i][j];
-		}
-	}
-	cin >> taxi.y >> taxi.x;
-	
-	int idx = 2;
-	Point from, to;
-	for (int i = 0; i < M; i++)
-	{
-		cin >> from.y >> from.x >> to.y >> to.x;
-		board[from.y][from.x] = idx;
-		customers[idx] = { from, to };
-		idx++;
-	}
-}
-
-void Solve()
-{
-	bool flag = false;
-	while (M--)
-	{
-		if (!Bfs()) {
-			ans = -1;
-			flag = true;
-			break;
-		}	
-	}
-	if(!flag)
-		ans = F;
-}
-
-bool Bfs()
-{
-	memset(visited, 0, sizeof(visited));
-
-	queue<Point> q;
-	q.push(taxi);
-	visited[taxi.y][taxi.x] = 1;
-
-	Point cp, np;
-	while (!q.empty()) {
-		cp = q.front(); q.pop();
-		for (int d = 0; d < 4; d++)
-		{
-			np = { cp.y + dy[d], cp.x + dx[d] };
-			if (np.y <= 0 || np.y > N || np.x <= 0 || np.x > N)
-				continue;
-			if (board[np.y][np.x] == 1)
-				continue;
-			if (visited[np.y][np.x] > 0)
-				continue;
-
-			visited[np.y][np.x] = visited[cp.y][cp.x] + 1;
-			q.push(np);
-		}
-	}
-
-	int minVal = 1e9;
-	int minIdx;
-	for (int i = 1; i <= N; i++)
-	{
-		for (int j = 1; j <= N; j++)
-		{
-			if (board[i][j] > 1) {
-				if (minVal > visited[i][j]) {
-					minVal = visited[i][j];
-					minIdx = board[i][j];
-				}
-			}
-		}
-	}
-
-	// 길이 막혀서 못 가는 경우 : minVal이 0일 수 밖에 없음
-	if (minVal == 0)
-		return false;
-	// minPoint로 가고 연료 소진
-	taxi = customers[minIdx].from;
-	F -= (minVal - 1);
-	// 연료 소진됐으면 리턴
-	if (F < 0)
-		return false;
-
-	// 아니면 목적지로 이동
-	// 목적지도 최단거리로 이동
-	memset(visited, 0, sizeof(visited));
-	q.push(taxi);
-	visited[taxi.y][taxi.x] = 1;
-
-	while (!q.empty()) {
-		cp = q.front(); q.pop();
-		for (int d = 0; d < 4; d++)
-		{
-			np = { cp.y + dy[d], cp.x + dx[d] };
-			if (np.y <= 0 || np.y > N || np.x <= 0 || np.x > N)
-				continue;
-			if (board[np.y][np.x] == 1)
-				continue;
-			if (visited[np.y][np.x] > 0)
-				continue;
-
-			visited[np.y][np.x] = visited[cp.y][cp.x] + 1;
-			q.push(np);
-
-			if (np.y == customers[minIdx].to.y && np.x == customers[minIdx].to.x) {
-				board[taxi.y][taxi.x] = 0;
-				F -= (visited[np.y][np.x] - 1);
-				if (F < 0)
-					return false;
-				F += 2 * (visited[np.y][np.x] - 1);
-				taxi = np;
-				return true;
-			}
-		}
-	}
-	// return true 되지 못했으면 길이 막혀서 목적지로 못 간 것
-	// return false 해준다
-	return false;
-}
-```
-
-- 출발지는 손님마다 서로 다르나, 도착지는 서로 같을 수 있음을 유의할 것
-- 위 풀이는 다음 그림으로 이해할 수 있음
-
-![123](https://github.com/user-attachments/assets/5cc90c5f-35d7-48b4-8e1d-272a10b21bfe)
+### 📌 배운 점
+- **전체 시뮬레이션 순서 제어**  
+승객 선택 → 연료 차감 → 목적지 이동 → 연료 보충 → 다음 승객 루프를 반복하는 순서를 깔끔하게 유지해야 합니다. 특히 “승객-목적지” 쌍을 처리하는 과정에서 변수(현재 택시 위치, 남은 연료, 승객 수)가 올바르게 갱신되는지 로직의 흐름을 여러 번 점검하면서 전체 시뮬레이션 구조를 다듬을 수 있었습니다.
