modify: BOJ_2206_벽 부수고 이동하기 README 수정

--- a/구현/[백준]거울/거울.md
+++ b/구현/[백준]거울/거울.md
@@ -38,3 +38,31 @@
 	- 위쪽  
 		- 범위 : (1, M) ~ (1, 1)  
 		- 방향 : 하(3)  
+
+
+## 💡 BOJ 5430 - AC[[문제 링크](https://www.acmicpc.net/problem/5430)]
+
+| 항목 | 내용 |
+|------|------|
+| 문제 유형 | `구현`, `자료구조` |
+| 사용 알고리즘 | `` |
+| 난이도 | `골드5` |
+
+### ✅ 문제 설명
+- 두 개의 커맨드 R(뒤집기)과 D(버리기)가 있음
+
+- **배열의 초기값과 수행할 함수가 주어졌을 때, 최종 결과를 구하는 문제**
+
+### 🔍 풀이 접근
+- 입력을 순서대로 처리하기 위해 문자열을 순서대로 접근한다
+
+- 입력 숫자들을 파싱해서 배열에 적당히 옮긴다
+
+- 순서대로 명렁을 실행한다
+
+### 💡 핵심 로직
+- 뒤집는 명령이 들어올 때, 진짜 숫자를 뒤집지 않고, 플래그로 숫자들을 다룬다
+
+### 📌 배운 점
+**예외 발생가능 지점의 디버깅**  
+AccessEmptyContainer Error를 만났기 때문에, deque를 다루는 부분에서 문제가 발생함을 인식하고 해당 지점에서 디버깅을 통해 디버깅하는 경험을 쌓았습니다. 또 반례를 생각해내는 생각의 깊이도 더할 수 있었습니다.
